[Refactor] Breaks out html on results view

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,150 +1,7 @@
 
- <!-- start main container -->
-  <div> 
-    <div ui-view="glance-card"></div>
-
-    <!-- Map Canvas -->
-    <div> 
-      <div id="map-canvas"></div>
-      <h1>This is the map template</h1>
-    </div> 
-
-<!-- start form section -->
-          <div> 
-            <div>
-              <input type="search" ng-model="main.searchInfo.address" id="place-search" placeholder="Enter an address">
-              <!-- changed from main.address to main.searchInfo.address -->
-              <button ng-click="main.submitAddress()">Submit</button>
-            </div>
-          
-            <div>  <!--start of rent/buy section -->
-              <div>
-                <label>Type of Place:</label>
-              </div>
-
-              <ul> 
-                <li ng-click="main.setValueRent()">
-                  <input type="radio" name="rentBuy" value="rent" ng-model="main.searchInfo.buyOrRent">
-                  <label for="rentBuy">Rent</label>
-                </li>
-                <li ng-click="main.setValueBuy()">
-                  <input type="radio" name="rentBuy" value="buy" ng-model="main.searchInfo.buyOrRent" checked="">
-                  <label for="rentBuy">Buy</label>
-                </li>
-              </ul>
-            </div> <!--end of rent/buy section -->
-
-            <div> <!--start of bed/bath section -->
-              <label>Bed:</label>  
-            </div>
-            <div>
-              <select name="bedrooms" ng-model="main.searchInfo.bedrooms">
-                <option value="1">1 bed</option>
-                <option value="2">2 bed</option>
-                <option value="3">3 bed</option>
-                <option value="4">4 bed</option>
-                <option value="5">5 bed</option>
-                <option value="6">6 bed</option>
-                <option value="7">7+ bed</option>
-              </select>
-            </div>
-            <div>
-              <label>Bath:</label>
-            </div>
-            <div>
-              <select name="bathrooms" ng-model="main.searchInfo.bathrooms">
-                <option value="1">1 bath</option>
-                <option value="2">2 bath</option>
-                <option value="3">3 bath</option>
-                <option value="4">4 bath</option>
-                <option value="5">5 bath</option>
-                <option value="6">6 bath</option>
-                <option value="7">7+ bath</option>
-              </select>
-            </div>
-          </div> <!--end of bed/bath section -->
-
-<!--end of form section -->
-<!--start of filter section -->
-
-          <div> <!-- start of rent section -->
-            <div>
-              <label>Max Monthly Price:</label>
-            </div>
-            <div>${{main.searchInfo.maxRent}}
-              <input type="range" name="rentRange" min="0" max="8000" value="1000" step="25" ng-model="main.searchInfo.maxRent">
-            </div>
-          </div> <!-- end of rent section -->
-
-          <div>  <!-- start of time/distance section -->
-            <div>
-              <label>Max Time:</label>
-            </div>
-            <div>
-              <select name="commuteTime" ng-model="main.searchInfo.commuteTime">
-                <option value="15">15 min</option>
-                <option value="30">30 min</option>
-                <option value="45">45 min</option>
-                <option value="60">1 hr</option>
-              </select>
-            </div>
-
-            <div>
-                <label>Max Distance:</label>
-            </div>
-              <div>
-                <select name="commuteDistance" ng-model="main.searchInfo.commuteDistance">
-                  <option value="5">5 miles</option>
-                  <option value="10">10 miles</option>
-                  <option value="15">15 miles</option>
-                  <option value="20">20 miles</option>
-                  <option value="25">25 miles</option>
-                  <option value="30">30 miles</option>
-                </select>
-              </div>
-            </div> <!-- end of time/distance section -->
-
-            <div>
-              <button ng-click="main.filterNeighborhoods()">Filter Search Results</button>
-            </div>
-<!--end of filter section -->
-
-            <hr>
-
-<!--start of order-by section -->
-            <div>
-              <label>Order Results By:</label>
-              <select name="selectOrder" ng-model="main.filterType">
-                <option value="estimateLow">Lowest Rent</option>
-                <option value="commuteTime">Shortest Commute</option>
-                <option value="commuteDistance">Closest Distance</option>
-              </select>
-            </div>
-          </div> 
-
-<!--end of order-by section -->
-        <hr>
- <!-- start thumbnail section -->
-
-        <div> <!---single glance card start-->
-          <div ng-repeat="neighborhood in main.filteredNeighborhoodArray | orderBy:main.filterType">
-            <div ng-click="main.selectNeighborhood(neighborhood)">
-              <div>
-                  {{neighborhood.name}}
-              </div>
-              <div>
-                <div>
-                  <h4>Rent</h4>
-                  <p>${{neighborhood.estimateLow || N/A }}-${{neighborhood.estimateHigh || N/A }}</p>
-                  <small>Powered by Zilpy</small>
-                </div>
-                <div>
-                  <h4>Commute</h4>
-                  <p>{{neighborhood.commuteDistance}} miles | {{neighborhood.commuteTime}} min</p>
-                </div>
-              </div>
-           </div>
-        </div> <!---single glance card end-->
-      </div> <!-- end glance-card-results sections -->
-
-  </div> <!-- end main container -->
+<div>  <!-- start main container -->
+  <h2>Map Section</h2>
+  <map></map>
+  <h2>Glance Card Section</h2>
+  <div ui-view="glance-card"></div>
+</div> <!-- end main container -->
