--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movein Assistant</title>
     <link href="assets/css/app.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="./assets/css/foundation-icons.css">
+    <!-- <link rel="stylesheet" href="./assets/css/foundation-icons.css"> -->
     <link rel="stylesheet" href="./assets/css/styles.css">
   </head>
 
   <body ng-controller="MainController as main">
 
     <div> <!-- start search header -->
-      <img src="../assets/images/app-icon.png" alt="logo">
+      <img src="../assets/images/app-icon.png" alt="logo" style="width:25; height:25px">
       <h3>Move-in Assistant</h3>
     </div>
 
@@ -47,9 +47,18 @@
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 
     <script src="app/app.js"></script>
+    <script src="app/map/mapController.js"></script>
+    <script src="app/searchForm/searchFormController.js"></script>
+    <script src="app/results/resultsController.js"></script>
+    <script src="app/filter/filterController.js"></script>
+    <script src="app/thumbnails/thumbnailsController.js"></script>
     <script src="app/mainCtrl.js"></script>
     <script src="app/services.js"></script>
     <script src="app/map/mapService.js"></script>
+    <script src="app/map/mapDirective.js"></script>
+    <script src="app/searchForm/searchFormDirective.js"></script>
+    <script src="app/filter/filterDirective.js"></script>
+    <script src="app/thumbnails/thumbnailsDirective.js"></script>
 
   </body>
 </html>
