[Progress] Implements Bootstrap layout for page

--- a/client/app/filter/filterTemplate.html
+++ b/client/app/filter/filterTemplate.html
@@ -37,6 +37,6 @@
   </div> <!-- end of time/distance section -->
 
   <div>
-    <button ng-click="res.filterNeighborhoods()">Filter Search Results</button>
+    <button type="button" ng-click="res.filterNeighborhoods()" class="btn btn-default">Filter</button>
   </div>
 </div>
