--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,10 @@
-
-<div>  <!-- start main container -->
-  <h2>Map Section</h2>
-  <map></map>
-  <h2>Glance Card Section</h2>
-  <div ui-view="glance-card"></div>
-</div> <!-- end main container -->
+<div class="row">
+  <div class="col-md-6" style="background-color:yellow">
+    <h2>Map Section</h2>
+    <map></map>
+  </div>
+  <div class="col-md-6" style="background-color:green">
+    <h2>Glance Card Section</h2>
+    <div ui-view="glance-card"></div>
+  </div>
+</div>
