--- a/client/app/searchForm/searchFormTemplate.html
+++ b/client/app/searchForm/searchFormTemplate.html
@@ -1,54 +1,57 @@
-<div>
-  <div>
-    <input type="search" ng-model="res.searchInfo.address" id="place-search" placeholder="Enter an address">
-    <!-- changed from res.address to res.searchInfo.address -->
-    <button ng-click="res.submitAddress()">Submit</button>
-  </div>
-
-  <div>  <!--start of rent/buy section -->
-    <div>
-      <label>Type of Place:</label>
-    </div>
-
-    <ul> 
-      <li ng-click="res.setValueRent()">
-        <input type="radio" name="rentBuy" value="rent" ng-model="res.searchInfo.buyOrRent">
-        <label for="rentBuy">Rent</label>
-      </li>
-      <li ng-click="res.setValueBuy()">
-        <input type="radio" name="rentBuy" value="buy" ng-model="res.searchInfo.buyOrRent" checked="">
-        <label for="rentBuy">Buy</label>
-      </li>
-    </ul>
-  </div> <!--end of rent/buy section -->
-
-  <div> <!--start of bed/bath section -->
-    <label>Bed:</label>  
-  </div>
-  <div>
-    <select name="bedrooms" ng-model="res.searchInfo.bedrooms">
-      <option value="1">1 bed</option>
-      <option value="2">2 bed</option>
-      <option value="3">3 bed</option>
-      <option value="4">4 bed</option>
-      <option value="5">5 bed</option>
-      <option value="6">6 bed</option>
-      <option value="7">7+ bed</option>
-    </select>
-  </div>
-  <div>
-    <label>Bath:</label>
-  </div>
-  <div>
-    <select name="bathrooms" ng-model="res.searchInfo.bathrooms">
-      <option value="1">1 bath</option>
-      <option value="2">2 bath</option>
-      <option value="3">3 bath</option>
-      <option value="4">4 bath</option>
-      <option value="5">5 bath</option>
-      <option value="6">6 bath</option>
-      <option value="7">7+ bath</option>
-    </select>
-  </div>  <!--end of bed/bath section -->
+<div class="col-md-12">
+  <form class="form-horizontal">
+    <div class="form-group">
+      <div class="row">
+        <div class="col-sm-10 col-md-8">
+          <label for="inputAddress" class="col-sm-2 control-label">Address</label>
+          <input type="email" class="form-control" id="inputAddress" placeholder="Enter an Address Here">
+        </div>
+        <div class="col-md-2 radio-btn" ng-click="res.setValueRent()">
+          <label class="radio-inline">
+          <input type="radio" name="rentBuy" value="rent" ng-model="res.searchInfo.buyOrRent"> 
+            Rent 
+          </label>
+        </div>
+        <div class="col-md-2 radio-btn" ng-click="res.setValueBuy()">
+          <label class="radio-inline">
+          <input type="radio" name="rentBuy" value="buy" ng-model="res.searchInfo.buyOrRent" checked="">
+          Buy 
+          </label>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-10 col-md-5">
+          <label for="inputEmail3" class="col-sm-2 col-md-2 control-label">Bath</label>
+          <select class="form-control" name="bathrooms" ng-model="res.searchInfo.bathrooms">
+            <option value="1">1 bath</option>
+            <option value="2">2 bath</option>
+            <option value="3">3 bath</option>
+            <option value="4">4 bath</option>
+            <option value="5">5 bath</option>
+            <option value="6">6 bath</option>
+            <option value="7">7+ bath</option>
+          </select>
+        </div>
+        <div class="col-sm-10 col-md-5">
+          <label for="bedrooms" class="col-sm-2 col-md-2 control-label">Bed</label>
+          <select class="form-control" name="bathrooms" ng-model="res.searchInfo.bathrooms">
+            <option value="1">1 bath</option>
+            <option value="2">2 bath</option>
+            <option value="3">3 bath</option>
+            <option value="4">4 bath</option>
+            <option value="5">5 bath</option>
+            <option value="6">6 bath</option>
+            <option value="7">7+ bath</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-10">
+          <button type="button" ng-click="res.submitAddress()" class="btn btn-default">Submit</button>
+        </div>
+      </div>
+  </form>
 </div>
+
+
 
