--- a/client/app/thumbnails/thumbnailsTemplate.html
+++ b/client/app/thumbnails/thumbnailsTemplate.html
@@ -1,35 +1,34 @@
-<div>
-  <!--start of order-by section -->
-  <div>
-    <label>Order Results By:</label>
-    <select name="selectOrder" ng-model="res.filterType">
-      <option value="estimateLow">Lowest Rent</option>
-      <option value="commuteTime">Shortest Commute</option>
-      <option value="commuteDistance">Closest Distance</option>
-    </select>
-  </div>
+<div class="thumbnails-container">
+<!-- NOTE: PLEASE UNCOMMENT NG-REPEAT DIV BELOW WHEN WORKING WITH ANGULAR; CARDS WILL NOT SHOW ON PAGE WITHOUT IT :) --> 
+    <!--start of order-by section -->
+    <div class="col-md-4 col-md-offset-8">
+      <select name="selectOrder" ng-model="res.filterType">
+        <option disabled>Order Results By:</option>
+        <option value="estimateLow">Lowest Rent</option>
+        <option value="commuteTime">Shortest Commute</option>
+        <option value="commuteDistance">Closest Distance</option>
+      </select>
+    </div>
   <!--end of order-by section -->
 
-
-  <div> <!---single glance card start-->
-    <h1>Thumbnail Template</h1>
-    <div ng-repeat="neighborhood in res.filteredNeighborhoodArray | orderBy:res.filterType">
-      <div ng-click="res.selectNeighborhood(neighborhood)">
-        <div>
-            {{neighborhood.name}}
-        </div>
-        <div>
-          <div>
-            <h4>Rent</h4>
-            <p>${{neighborhood.estimateLow || N/A }}-${{neighborhood.estimateHigh || N/A }}</p>
-            <small>Powered by Zilpy</small>
+  <div class="card-deck-wrapper col-md-12">
+  <!---single glance card start-->
+    <div class="card-deck">
+      <!-- <div ng-repeat="neighborhood in res.filteredNeighborhoodArray | orderBy:res.filterType"> -->
+        <div class="card col-md-4" ng-click="res.selectNeighborhood(neighborhood)">
+          <img class="card-img-top" src="assets/images/santamonica.jpg" alt="picture of neighborhood">
+          <h3 class="card-title">{{neighborhood.name}}</h3>
+          <div class="card-block">
+            <h4 class="card-title">Rent Averages</h4>
+            <p class="card-text">${{neighborhood.estimateLow || N/A }}-${{neighborhood.estimateHigh || N/A }}</p>
           </div>
-          <div>
-            <h4>Commute</h4>
-            <p>{{neighborhood.commuteDistance}} miles | {{neighborhood.commuteTime}} min</p>
+          <div class="card-block">
+            <h4 class="card-title">Commute Time</h4>
+            <p class="card-text">${{neighborhood.estimateLow || N/A }}-${{neighborhood.estimateHigh || N/A }}</p>
           </div>
+          <small class="text-muted">Rent data powered by Zilpy</small>
         </div>
-     </div>
-    </div> 
-  </div> <!---single glance card end-->
-</div>
+      </div>
+    <!-- </div> -->
+    <!---single glance card end-->
+  </div>
