--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,10 +1,8 @@
-<div class="row">
-  <div class="col-md-6" style="background-color:yellow">
-    <h2>Map Section</h2>
+<div class="row main-container">
+  <div class="col-md-6">
     <map></map>
   </div>
-  <div class="col-md-6" style="background-color:green">
-    <h2>Glance Card Section</h2>
+  <div class="col-md-6">
     <div ui-view="glance-card"></div>
   </div>
 </div>
