--- a/client/app/searchForm/searchFormTemplate.html
+++ b/client/app/searchForm/searchFormTemplate.html
@@ -1,56 +1,46 @@
-<div class="col-md-12">
-  <form class="form-horizontal">
+<div class="searchForm">
+  <form>
     <div class="form-group">
-      <div class="row">
-        <div class="col-sm-10 col-md-8">
-          <label for="inputAddress" class="col-sm-2 control-label">Address</label>
-          <input type="email" class="form-control" id="inputAddress" placeholder="Enter an Address Here">
-        </div>
-        <div class="col-md-2 radio-btn" ng-click="res.setValueRent()">
-          <label class="radio-inline">
-          <input type="radio" name="rentBuy" value="rent" ng-model="res.searchInfo.buyOrRent"> 
-            Rent 
-          </label>
-        </div>
-        <div class="col-md-2 radio-btn" ng-click="res.setValueBuy()">
-          <label class="radio-inline">
-          <input type="radio" name="rentBuy" value="buy" ng-model="res.searchInfo.buyOrRent" checked="">
-          Buy 
-          </label>
-        </div>
+      <input type="email" class="form-control" id="inputAddress" placeholder="Enter an Address">
+    </div>
+    <!-- removed ng-click="res.setValueBuy() from ng-click on div for radio buttons since ng-model can be applied to select --> 
+    <div class="form-group">
+     <div class="row">
+      <div class="col-sm-10 col-md-2">
+        <select class="form-control" name="rentBuy" ng-model="res.searchInfo.buyOrRent">
+          <option value="rent">Rent</option>
+          <option value="buy">Buy</option>  
+        </select>
       </div>
-      <div class="form-group">
-        <div class="col-sm-10 col-md-5">
-          <label for="inputEmail3" class="col-sm-2 col-md-2 control-label">Bath</label>
-          <select class="form-control" name="bathrooms" ng-model="res.searchInfo.bathrooms">
-            <option value="1">1 bath</option>
-            <option value="2">2 bath</option>
-            <option value="3">3 bath</option>
-            <option value="4">4 bath</option>
-            <option value="5">5 bath</option>
-            <option value="6">6 bath</option>
-            <option value="7">7+ bath</option>
-          </select>
-        </div>
-        <div class="col-sm-10 col-md-5">
-          <label for="bedrooms" class="col-sm-2 col-md-2 control-label">Bed</label>
-          <select class="form-control" name="bathrooms" ng-model="res.searchInfo.bathrooms">
-            <option value="1">1 bath</option>
-            <option value="2">2 bath</option>
-            <option value="3">3 bath</option>
-            <option value="4">4 bath</option>
-            <option value="5">5 bath</option>
-            <option value="6">6 bath</option>
-            <option value="7">7+ bath</option>
-          </select>
-        </div>
+      <div class="col-sm-10 col-md-4">
+        <select class="form-control" name="bathrooms" ng-model="bathroomSelected">
+          <option value="1">1 bedroom</option>
+          <option value="2">2 bedrooms</option>
+          <option value="3">3 bedrooms</option>
+          <option value="4">4 bedrooms</option>
+          <option value="5">5 bedrooms</option>
+          <option value="6">6 bedrooms</option>
+          <option value="7">7+ bedrooms</option>
+        </select>
       </div>
-      <div class="form-group">
-        <div class="col-sm-10">
-          <button type="button" ng-click="res.submitAddress()" class="btn btn-default">Submit</button>
-        </div>
+      <div class="col-sm-10 col-md-4">
+        <select class="form-control" ng-model="res.searchInfo.bedrooms">
+          <option value="1" selected>1 bathrooms</option>
+          <option value="2">2 bathroom</option>
+          <option value="3">3 bathrooms</option>
+          <option value="4">4 bathrooms</option>
+          <option value="5">5 bathrooms</option>
+          <option value="6">6 bathrooms</option>
+          <option value="7">7+ bathrooms</option>
+        </select>
       </div>
+      <div class="col-sm-10 col-md-2">
+        <button type="button" ng-click="res.submitAddress()" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+    </div>
   </form>
+  <hr>
 </div>
 
 
