--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movein Assistant</title>
-
+    <title>Turf</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/app.css" rel="stylesheet">
     <link href="assets/css/index.css" rel="stylesheet">
+    <link href="assets/css/app.css" rel="stylesheet" type="text/css">
   </head>
 
   <body ng-controller="MainController as main">
