[Save] adds stock photos

--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
     <title>Turf</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/app.css" rel="stylesheet">
     <link href="assets/css/index.css" rel="stylesheet">
     <link href="assets/css/landing.css" rel="stylesheet">
+    <link href="assets/css/app.css" rel="stylesheet" type="text/css">
   </head>
 
   <body ng-controller="MainController as main">
@@ -64,6 +64,7 @@
     <script src="app/filter/filterDirective.js"></script>
     <script src="app/thumbnails/thumbnailsDirective.js"></script>
     <script src="app/mainCtrl.js"></script>
+
 
   </body>
 </html>
