[fix] Reimpliments map functionalitypost-routing

--- a/client/app/map/mapTemplate.html
+++ b/client/app/map/mapTemplate.html
@@ -1,4 +1,5 @@
-<div>
+
+<div style="width:700px; height:700px">
   <h1>This is the map template</h1>
-  <div id="map-canvas"></div>
+  <div id="map-canvas" style="height: 100%;width:100%"></div>
 </div>
