[Save] adds landing page as a ui router state

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <title>Turf</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/app.css" rel="stylesheet">
     <link href="assets/css/index.css" rel="stylesheet">
     <link href="assets/css/landing.css" rel="stylesheet">
     <link href="assets/css/app.css" rel="stylesheet" type="text/css">
