--- a/client/app/filter/filterTemplate.html
+++ b/client/app/filter/filterTemplate.html
@@ -1,24 +1,24 @@
 <div class="filterForm">
   <form>
 <!-- start of rent section -->
-    <div class="form-group"> 
-      <label>Max Monthly Price: ${{res.searchInfo.maxRent}}</label>
-      <input type="range" name="rentRange" min="0" max="8000" value="1000" step="25" ng-model="res.searchInfo.maxRent">
-    </div>  
+    <div class="form-group">
+      <label>Max Monthly Price: ${{main.searchInfo.maxRent}}</label>
+      <input type="range" name="rentRange" min="0" max="8000" value="1000" step="25" ng-model="main.searchInfo.maxRent">
+    </div>
 <!-- end of rent section -->
 
 <!-- start of time/distance section -->
-    <div class="form-group"> 
+    <div class="form-group">
      <div class="row">
       <div class="col-sm-10 col-md-5">
-        <select class="form-control" name="commuteTime" ng-model="res.searchInfo.commuteTime">
+        <select class="form-control" name="commuteTime" ng-model="main.searchInfo.commuteTime">
           <option value="15">15 min</option>
           <option value="30">30 min</option>
           <option value="45">45 min</option>
         </select>
       </div>
       <div class="col-sm-10 col-md-5">
-        <select class="form-control" name="commuteDistance" ng-model="res.searchInfo.commuteDistance">
+        <select class="form-control" name="commuteDistance" ng-model="main.searchInfo.commuteDistance">
           <option value="5">5 miles</option>
           <option value="10">10 miles</option>
           <option value="15">15 miles</option>
@@ -26,10 +26,10 @@
           <option value="25">25 miles</option>
           <option value="30">30 miles</option>
         </select>
-      </div>  
+      </div>
 <!-- end of time/distance section -->
       <div class="col-sm-10 col-md-2">
-        <button type="button" ng-click="res.filterNeighborhoods()" class="btn btn-default">Filter  </button>
+        <button type="button" ng-click="main.filterNeighborhoods()" class="btn btn-default">Filter  </button>
       </div>
     </div>
   </form>
