--- a/client/index.html
+++ b/client/index.html
@@ -48,11 +48,14 @@
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="https://google-maps-utility-library-v3.googlecode.com/svn-history/r391/trunk/markerwithlabel/src/markerwithlabel.js"></script>
 
-
     <!-- Source JS files -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
+
+    <!-- App JS files -->
     <script src="app/app.js"></script>
     <script src="app/map/mapController.js"></script>
     <script src="app/searchForm/searchFormController.js"></script>
