--- a/client/app/map/mapTemplate.html
+++ b/client/app/map/mapTemplate.html
@@ -1,4 +1,4 @@
 
-<div style="width:500px; height:500px">
-  <div id="map-canvas" style="height: 100%;width:100%"></div>
+<div class="map-container">
+  <div id="map-canvas"></div>
 </div>
