[Save] sets up How to Use section

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -17,7 +17,10 @@
 <div>
   <div class="container-fluid">
     <div>
-      <h1></h1>
+      <div class="howToUse">
+        <h1>How to use Turf</h1>
+        <h6> Turf is a web application to help you find your best next neighborhood by providing information on a variety of factors. Here is a sample of the functionality.
+      </div>
     </div>
   </div>
 </div>
