[Save] adds background image using ng-style

--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -1,6 +1,6 @@
 <div class="details-container">
  <!-- neighborhood header -->
-  <div class="details-neighborhood-bg" ng-style="{'background-color': 'blue'}">
+  <div class="details-neighborhood-bg" ng-style="main.randomImage()">
     <h6>Tokyo {{main.randomImage()}}</h6>
 
   </div>
