[Feature] loads a random image on the details page as the background of the neighborhood name

--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -1,7 +1,7 @@
 <div class="details-container">
  <!-- neighborhood header -->
   <div class="details-neighborhood-bg" ng-style="main.randomImage()">
-    <h6>Tokyo {{main.randomImage()}}</h6>
+    <h1>Tokyo</h1>
 
   </div>
    <!-- tabs -->
