--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
 
     <!-- App JS files -->
