--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -36,7 +36,8 @@
          <label class="">Amenities</label>
       </div>
       <div class="col-xs-12 col-sm-10">
-        <div class="row">
+        <div class="row" ng-controller="detailsController">
+
             <div class="col-xs-6 col-sm-4">
               <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
               <span>Hospitals</span>
@@ -57,11 +58,24 @@
               <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
               <span>Library</span>
             </div>
-          <div class="col-xs-6 col-sm-4 mt-20"><a href="#">+ More</a></div>
-          <div class="col-xs-6 col-sm-4" style="display:none">
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Bank</span>
-          </div>
+          <div class="col-xs-6 col-sm-4 mt-20"><a href="#" ng-click="switch()">{{moreLess}}</a></div>
+            <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
+              <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
+              <span>Hidden</span>
+            </div>
+            <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
+              <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
+              <span>Hidden</span>
+            </div>
+            <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
+              <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
+              <span>Hidden</span>
+            </div>
+            <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
+              <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
+              <span>Hidden</span>
+            </div>
+
         </div>
       </div>
     </div>
@@ -74,7 +88,7 @@
         <img ng-src="{{pic}}"/>
       </div>
     </slick>
-  </div> 
+  </div>
 </div>
 
 
