[Feature] expands and collapses details amenities and attractions icons

--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -37,7 +37,6 @@
       </div>
       <div class="col-xs-12 col-sm-10">
         <div class="row" ng-controller="detailsController">
-
             <div class="col-xs-6 col-sm-4">
               <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
               <span>Hospitals</span>
@@ -58,7 +57,7 @@
               <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
               <span>Library</span>
             </div>
-          <div class="col-xs-6 col-sm-4 mt-20"><a href="#" ng-click="switch()">{{moreLess}}</a></div>
+          <div class="col-xs-6 col-sm-4 mt-20"><a href="#" ng-click="expandCollapse()">{{moreLess}}</a></div>
             <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
               <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
               <span>Hidden</span>
@@ -75,7 +74,6 @@
               <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
               <span>Hidden</span>
             </div>
-
         </div>
       </div>
     </div>
