--- a/client/index.html
+++ b/client/index.html
@@ -55,7 +55,7 @@
     <script src="lib/angular-slick/dist/slick.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
-    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- // <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
