[Fix] Sets filter section to be collapse on load

--- a/client/app/filter/filterTemplate.html
+++ b/client/app/filter/filterTemplate.html
@@ -1,4 +1,4 @@
-<div class="filterForm">
+<div class="filterForm" ng-init="isCollapsed=true">
   <div class="row">
     <div class="col-md-6">
       <button type="button" class="btn btn-default" ng-click="isCollapsed = !isCollapsed">Filter Options</button>
