[Save] Creates main.placesObj

--- a/client/index.html
+++ b/client/index.html
@@ -81,6 +81,7 @@
     <script src="app/searchForm/searchFormDirective.js"></script>
     <script src="app/filter/filterDirective.js"></script>
     <script src="app/thumbnails/thumbnailsDirective.js"></script>
+    <script src="app/details/detailsService.js"></script>
     <script src="app/mainCtrl.js"></script>
     <script src="app/charts/chartsController.js"></script>
     <script src="app/charts/chartsDirective.js"></script>
